compiler/tests/en/errors/incdec_non_lvalue.salam
// EXPECT: E013
func main:
    mut a : i32 = 1
    mut b : i32 = 2
    println((a + b)++)
end
